syntax = "proto3";

package api;
option go_package = "github.com/supermihi/karlchencloud/api";

enum MatchPhase {
    AUCTION = 0;
    GAME = 1;
    FINISHED = 2;
}
enum Suit {
    DIAMONDS = 0;
    HEARTS = 1;
    SPADES = 2;
    CLUBS = 3;
}

enum Rank {
    NINE = 0;
    JACK = 1;
    QUEEN = 2;
    KING = 3;
    TEN = 4;
    ACE = 5;
}


enum Player {
    PLAYER_1 = 0;
    PLAYER_2 = 1;
    PLAYER_3 = 2;
    PLAYER_4 = 3;
}

enum Party {
    RE = 0;
    CONTRA = 1;
}

enum BidType {
    RE_BID = 0;
    CONTRA_BID = 1;
    RE_NO_NINETY = 2;
    RE_NO_SIXTY = 3;
    RE_NO_THIRTY = 4;
    RE_SCHWARZ = 5;
    CONTRA_NO_NINETY = 6;
    CONTRA_NO_SIXTY = 7;
    CONTRA_NO_THIRTY = 8;
    CONTRA_SCHWARZ = 9;
}


enum GameType {
    NORMAL_GAME = 0;
    MARRIAGE = 1;
    VOLUNTARY_SOLO = 2;
    COMPULSORY_SOLO = 3;
}
enum SoloType {
    DIAMONDS_SOLO = 0;
    HEARTS_SOLO = 1;
    SPADES_SOLO = 2;
    CLUBS_SOLO = 3;
    MEATLESS_SOLO = 4;
}